--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
 <nav>
   <a href="/">recent posts</a>
   <a href="/archives">the archives</a>
-  <a href="/about-me">about me</a>
-  <a href="/contact">contact</a> 
 
+  <a class="sub-link" href="/about-me">about me</a>
+  <a class="sub-link" href="/contact">contact</a> 
   <a class="sub-link" href="{{ "/feed.xml" | absolute_url }}">rss</a>
 </nav>
