--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,9 @@ layout: default
       {{ page.title | escape }}
     </a>
   </h2>
+  <div class="post-meta">
+    {{ page.date | date: '%B %d, %Y' }}
+  </div>
   <div class="content">
     {{ content }}
   </div>
