--- a/assets/layout.scss
+++ b/assets/layout.scss
@@ -86,6 +86,18 @@ article {
   margin-bottom: 1.5em;
 }
 
+.post-title {
+  text-align: center;
+}
+
+.post-meta {
+  padding: 0.5em 0;
+  font-family: 'Lucida Grande', sans-serif;
+  font-size: 14px;
+  color: #444;
+  text-align: center;
+}
+
 .excerpt,
 .content {
   margin: 0.5em 0 2em;
