--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 var disqus_config = function () {
   this.page.url = '{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = '{% if page.dsq_thread_id %}{{ page.dsq_thread_id }}{% else %}{{ page.url | relative_url }}{% endif %}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  this.page.identifier = '{% if page.meta.dsq_thread_id %}{{ page.meta.dsq_thread_id }}{% else %}{{ page.url | relative_url }}{% endif %}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
