--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 var disqus_config = function () {
-  this.page.url = '{{ page.url | absolute_url }}';  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.url = '{% if page.meta.dsq_url%}{{ page.meta.dsq_url }}{% else %}{{ page.url | absolute_url }}{% endif %}';  // Replace PAGE_URL with your page's canonical URL variable
   this.page.identifier = '{% if page.meta.dsq_thread_id %}{{ page.meta.dsq_thread_id }}{% else %}{{ page.url | relative_url }}{% endif %}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
